Create header section

--- a/style.css
+++ b/style.css
@@ -6,6 +6,13 @@
 }
 
 @font-face {
+    font-family: "Poppins Regular";
+    src: url(./fonts/Poppins-Medium.ttf) format("truetype");
+    font-weight: 500;
+    font-style: normal;
+}
+
+@font-face {
     font-family: "Popping SemiBold";
     src: url(./fonts/Poppins-SemiBold.ttf) format("truetype");
     font-weight: 600;
@@ -20,4 +27,9 @@ html {
     /* color */
     --white: #FFFFFF;
     --black: #000000;
+
+    /* fonts */
+    --regular: "Poppins Regular", sans-serif;
+    --medium: "Poppins Medium", sans-serif;
+    --semi-bold: "Poppins SemiBold", sans-serif;
 }
