--- a/styles/header.css
+++ b/styles/header.css
@@ -5,8 +5,9 @@
 }
 
 .header__logo {
-    font-family: var(--regular);
-    color: var(--black);
+    font-family: var(--font-family);
+    font-weight: 400;
+    color: var(--black-color);
 }
 
 .header__logo-span {
@@ -16,16 +17,18 @@
 .header__link {
     cursor: pointer;
     text-decoration: none;
-    font-family: var(--medium);
-    color: var(--black);
+    font-family: var(--font-family);
+    font-weight: 500;
+    color: var(--black-color);
 }
 
 .header__button {
     cursor: pointer;
-    background-color: var(--white);
-    font-family: var(--regular);
-    color: var(--black);
-    border: 2px solid var(--black);
+    background-color: var(--white-color);
+    font-family: var(--font-family);
+    font-weight: 400;
+    color: var(--black-color);
+    border: 2px solid var(--black-color);
     border-radius: 5px;
 }
 
@@ -44,35 +47,6 @@
     transition: 0.3s;
 }
 
-.hero {
-    display: grid;
-}
-
-.hero__title {
-    display: inline-block;
-    font-family: var(--semi-bold);
-    color: var(--black);
-}
-
-.hero__description {
-    color: #8F95A5;
-}
-
-.hero__button {
-    background-color: #263238;
-    color: var(--white);
-    border: none;
-    cursor: pointer;
-}
-
-.hero__image-container {
-    margin: auto;
-}
-
-.hero__image {
-    width: 100%;
-    height: auto;
-}
 
 
 @media (min-width: 993px) {
@@ -104,40 +78,6 @@
 
     .header__burger {
         display: none;
-    }
-
-    .hero {
-        margin-bottom: 103px;
-        padding: 0 123px 0 130px;
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: auto;
-        align-items: center;
-    }
-
-    .hero__title {
-        margin: 0 38px 58px 0;
-        font-size: 64px;
-        max-width: 386px;
-    }
-
-    .hero__icon {
-        margin-bottom: 28px;
-        width: 85px;
-        height: 85px;
-    }
-
-    .hero__description {
-        margin: 0 0 65px;
-        font-family: var(--regular);
-        font-size: 24px;
-        max-width: 632px;
-    }
-
-    .hero__button {
-        padding: 32px 118px;
-        font-family: var(--regular);
-        font-size: 36px;
-        border-radius: 15px;
     }
 }
 
@@ -171,39 +111,6 @@
 
     .header__burger {
         display: none;
-    }
-
-    .hero {
-        margin-bottom: 60px;
-        padding: 0 21px 0 29px;
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: auto;
-        align-items: center;
-    }
-
-    .hero__title {
-        margin: 0 12px 42px 0;
-        font-size: 48px;
-        max-width: 290px;
-    }
-
-    .hero__icon {
-        width: 59px;
-        height: 59px;
-    }
-
-    .hero__description {
-        margin: 0 0 40px;
-        font-family: var(--regular);
-        font-size: 20px;
-        max-width: 420px;
-    }
-
-    .hero__button {
-        padding: 22px 79px;
-        font-family: var(--regular);
-        font-size: 24px;
-        border-radius: 5px;
     }
 }
 
@@ -257,39 +164,6 @@
     .header__burger-button::after {
         top: 12px;
     }
-
-    .hero {
-        margin-bottom: 80px;
-        padding: 0 16px 0 39px;
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: auto;
-        align-items: center;
-    }
-
-    .hero__title {
-        margin: 0 0 25px;
-        font-size: 36px;
-        max-width: 217px;
-    }
-
-    .hero__icon {
-        width: 51px;
-        height: 51px;
-    }
-
-    .hero__description {
-        margin: 0 0 33px;
-        font-family: var(--regular);
-        font-size: 16px;
-        max-width: 340px;
-    }
-
-    .hero__button {
-        padding: 19px 67px;
-        font-family: var(--regular);
-        font-size: 18px;
-        border-radius: 5px;
-    }
 }
 
 
@@ -338,49 +212,6 @@
     .header__burger-button::after {
         top: 10px;
     }
-
-    .hero {
-        margin-bottom: 112px;
-        padding: 0 42px;
-        grid-template-columns: auto;
-        grid-template-rows: 1fr auto;
-        justify-items: center;
-    }
-
-    .hero__info {
-        text-align: center;
-    }
-
-    .hero__title {
-        margin: 0 0 28px;
-        font-size: 34px;
-        max-width: 491px;
-    }
-
-    .hero__title-indent {
-        display: none;
-    }
-
-    .hero__icon {
-        display: none;
-    }
-
-    .hero__description {
-        margin: 0 0 38px;
-        font-family: var(--regular);
-        font-size: 16px;
-    }
-
-    .hero__button {
-        padding: 24px 101px;
-        font-family: var(--medium);
-        font-size: 18px;
-        border-radius: 5px;
-    }
-
-    .hero__image-container {
-        order: -1;
-    }
 }
 
 
@@ -428,47 +259,5 @@
 
     .header__burger-button::after {
         top: 7px;
-    }
-
-    .hero {
-        margin-bottom: 70px;
-        padding: 0 10px;
-        grid-template-columns: auto;
-        grid-template-rows: 1fr auto;
-        justify-items: center;
-    }
-
-    .hero__info {
-        text-align: center;
-    }
-
-    .hero__title {
-        margin: 0 0 20px;
-        font-size: 24px;
-    }
-
-    .hero__title-indent {
-        display: none;
-    }
-
-    .hero__icon {
-        display: none;
-    }
-
-    .hero__description {
-        margin: 0 0 35px;
-        font-family: var(--regular);
-        font-size: 14px;
-    }
-
-    .hero__button {
-        padding: 18px 99px;
-        font-family: var(--medium);
-        font-size: 16px;
-        border-radius: 5px;
-    }
-
-    .hero__image-container {
-        order: -1;
     }
 }
