--- a/styles/style.css
+++ b/styles/style.css
@@ -1,26 +1,33 @@
 @font-face {
     font-family: "Poppins";
-    src: url(./fonts/Poppins-Regular.ttf) format("truetype");
+    src: url(../fonts/Poppins-Regular.ttf) format("truetype");
     font-weight: 400;
     font-style: normal;
 }
 
 @font-face {
     font-family: "Poppins";
-    src: url(./fonts/Poppins-Medium.ttf) format("truetype");
+    src: url(../fonts/Poppins-Medium.ttf) format("truetype");
     font-weight: 500;
     font-style: normal;
 }
 
 @font-face {
     font-family: "Poppins";
-    src: url(./fonts/Poppins-SemiBold.ttf) format("truetype");
+    src: url(../fonts/Poppins-SemiBold.ttf) format("truetype");
     font-weight: 600;
     font-style: normal;
 }
 
 html {
     scroll-behavior: smooth;
+}
+
+body {
+    font-family: var(--font-family);
+}
+
+* {
     box-sizing: border-box;
 }
 
