--- a/styles/header.css
+++ b/styles/header.css
@@ -10,7 +10,7 @@
 }
 
 .header__logo-span {
-    color: #939393;
+    color: var(--logo-color);
 }
 
 .header__link {
@@ -39,7 +39,7 @@
 
 .header__burger-button {
     position: relative;
-    background-color: #39515E;
+    background-color: var(--burger-btn-bg-color);
     border-radius: 1px;
     transition: 0.3s;
 }
@@ -139,7 +139,7 @@
         position: absolute;
         width: 30px;
         height: 3px;
-        background-color: #39515E;
+        background-color: var(--burger-btn-bg-color);
         transition: 0.3s;
         border-radius: 1px;
     }
@@ -149,7 +149,7 @@
         position: absolute;
         width: 21px;
         height: 3px;
-        background-color: #39515E;
+        background-color: var(--burger-btn-bg-color);
         transition: 0.3s;
         border-radius: 1px;
     }
@@ -187,7 +187,7 @@
         position: absolute;
         width: 42px;
         height: 4px;
-        background-color: #39515E;
+        background-color: var(--burger-btn-bg-color);
         transition: 0.3s;
         border-radius: 1px;
     }
@@ -197,7 +197,7 @@
         position: absolute;
         width: 30px;
         height: 4px;
-        background-color: #39515E;
+        background-color: var(--burger-btn-bg-color);
         transition: 0.3s;
         border-radius: 1px;
     }
@@ -235,7 +235,7 @@
         position: absolute;
         width: 34px;
         height: 3px;
-        background-color: #39515E;
+        background-color: var(--burger-btn-bg-color);
         transition: 0.3s;
         border-radius: 1px;
     }
@@ -245,7 +245,7 @@
         position: absolute;
         width: 24px;
         height: 3px;
-        background-color: #39515E;
+        background-color: var(--burger-btn-bg-color);
         transition: 0.3s;
         border-radius: 1px;
     }
