--- a/styles/style.css
+++ b/styles/style.css
@@ -23,8 +23,13 @@ html {
     scroll-behavior: smooth;
 }
 
-* {
+body {
     font-family: "Poppins", sans-serif;
+}
+
+*,
+*::before,
+*::after {
     box-sizing: border-box;
 }
 
