Create about-us section

--- a/styles/style.css
+++ b/styles/style.css
@@ -42,4 +42,5 @@ body {
     --logo-color: #939393;
     --burger-btn-bg-color: #39515E;
     --skills-block-bg: #F5F5F5;
+    --feature-title-color: #2A3246;
 }
