--- a/styles/skills.css
+++ b/styles/skills.css
@@ -12,6 +12,11 @@
     border-radius: 10px;
 }
 
+.skills__offer-image {
+    width: 100%;
+    height: auto;
+}
+
 .skills__offer-title {
     font-weight: 600;
     color: var(--accent-color);
