--- a/styles/about-us.css
+++ b/styles/about-us.css
@@ -18,6 +18,7 @@
     color: var(--description-color);
 }
 
+
 @media (min-width: 993px) {
     .about-us {
         margin-bottom: 188px;
@@ -35,6 +36,7 @@
         margin: 0 0 46px;
         font-size: 20px;
         max-width: 635px;
+        line-height: 30px;
     }
 
     .about-us__features {
@@ -81,6 +83,7 @@
         margin: 0 0 45px;
         font-size: 16px;
         max-width: 530px;
+        line-height: 24px;
     }
 
     .about-us__features {
@@ -127,6 +130,7 @@
         margin: 0 0 40px;
         font-size: 14px;
         max-width: 325px;
+        line-height: 21px;
     }
 
     .about-us__features {
@@ -173,6 +177,7 @@
         margin: 0 0 50px;
         font-size: 14px;
         max-width: 510px;
+        line-height: 21px;
     }
 
     .about-us__features {
@@ -214,6 +219,7 @@
     .about-us__description {
         margin: 0 0 37px;
         font-size: 13px;
+        line-height: 20px;
     }
 
     .about-us__features {
