--- a/styles/hero.css
+++ b/styles/hero.css
@@ -4,6 +4,7 @@
 
 .hero__title {
     display: inline-block;
+    letter-spacing: normal;
 }
 
 .hero__button {
@@ -43,10 +44,11 @@
         margin: 0 0 65px;
         font-size: 24px;
         max-width: 632px;
+        line-height: 36px;
     }
 
     .hero__button {
-        padding: 32px 118px;
+        padding: 46px 118px;
         font-weight: 400;
         font-size: 36px;
         border-radius: 15px;
@@ -78,6 +80,7 @@
         margin: 0 0 40px;
         font-size: 20px;
         max-width: 420px;
+        line-height: 30px;
     }
 
     .hero__button {
@@ -113,6 +116,7 @@
         margin: 0 0 33px;
         font-size: 16px;
         max-width: 340px;
+        line-height: 24px;
     }
 
     .hero__button {
@@ -154,6 +158,7 @@
     .hero__description {
         margin: 0 0 38px;
         font-size: 16px;
+        line-height: 24px;
     }
 
     .hero__button {
@@ -198,6 +203,7 @@
     .hero__description {
         margin: 0 0 35px;
         font-size: 14px;
+        line-height: 21px;
     }
 
     .hero__button {
