--- a/styles/skills.css
+++ b/styles/skills.css
@@ -15,6 +15,7 @@
 .skills__offer-title {
     font-weight: 600;
     color: var(--accent-color);
+    letter-spacing: 0.015em;
 }
 
 .skills__offer-button {
@@ -97,6 +98,7 @@
     .skills__offer-description {
         margin: 0 0 35px;
         font-size: 16px;
+        line-height: 24px;
     }
 
     .skills__offer-button {
@@ -187,6 +189,7 @@
     .skills__offer-description {
         margin: 0 0 25px;
         font-size: 14px;
+        line-height: 21px;
     }
 
     .skills__offer-button {
@@ -268,6 +271,7 @@
     .skills__offer-description {
         margin: 0 0 20px;
         font-size: 13px;
+        line-height: 20px;
     }
 
     .skills__offer-button {
@@ -328,6 +332,7 @@
     .skills__offer-description {
         margin: 0 0 30px;
         font-size: 12px;
+        line-height: 18px;
     }
 
     .skills__offer-button {
@@ -393,6 +398,7 @@
     .skills__offer-description {
         margin: 0 0 30px;
         font-size: 13px;
+        line-height: 20px;
     }
 
     .skills__offer-button {
