--- a/styles/contact-us.css
+++ b/styles/contact-us.css
@@ -129,7 +129,7 @@
         margin-bottom: 112px;
         grid-template-columns: 1fr 2fr;
         grid-template-rows: repeat(3, auto);
-        justify-content: space-between;
+        /* justify-content: space-between; */
         column-gap: 36px;
     }
 
@@ -175,87 +175,87 @@
 
 @media (min-width: 321px) and (max-width: 575px) {
     .contacts {
-        padding: 0 33px;
-        margin-bottom: 144px;
+        padding: 0 5%;
+        margin-bottom: 10%;
         grid-template-rows: repeat(4, auto);
         text-align: center;
         justify-items: center;
     }
 
     .contacts__image-container {
-        margin-bottom: 34px;
+        margin-bottom: 5%;
         grid-row: 2;
-        max-width: 358px;
+        max-width: 100%;
     }
 
     .contacts__title {
-        margin: 0 0 110px;
+        margin: 0 0 15%;
         font-size: 30px;
         grid-row: 1;
     }
 
     .contacts__description {
-        margin: 0 0 60px;
+        margin: 0 0 10%;
         font-size: 16px;
-        line-height: 24px;
+        line-height: 1.5;
     }
 
     .contacts__form {
         grid-template-columns: 1fr auto;
-        grid-template-rows: 60px;
+        grid-template-rows: 3.75rem;
         width: 100%;
     }
 
     .contacts__form-mail {
-        padding: 20px 0 20px 25px;
+        padding: 1.25rem 0 1.25rem 1.5625rem;
     }
 
     .contacts__form-mail::placeholder {
-        font-size: 13px;
+        font-size: 0.8125rem;
     }
 
     .contacts__form-btn {
-        padding: 15px 56px;
-        font-size: 16px;
+        padding: 1rem 3.5rem;
+        font-size: 16;
     }
 }
 
 
 @media (max-width: 320px) {
     .contacts {
-        padding: 0 15px;
-        margin-bottom: 57px;
+        padding: 0 5%;
+        margin-bottom: 10%;
         grid-template-rows: repeat(4, auto);
         text-align: center;
         justify-items: center;
     }
 
     .contacts__image-container {
-        margin-bottom: 38px;
+        margin-bottom: 5%;
         grid-row: 2;
-        max-width: 253px;
+        max-width: 100%;
     }
 
     .contacts__title {
-        margin: 0 0 70px;
+        margin: 0 0 12%;
         font-size: 24px;
         grid-row: 1;
     }
 
     .contacts__description {
-        margin: 0 0 30px;
+        margin: 0 0 7%;
         font-size: 14px;
         line-height: 21px;
     }
 
     .contacts__form {
-        grid-template-rows: repeat(2, 50px);
-        row-gap: 17px;
-        width: 100%;
+        grid-template-rows: repeat(2, 3.125rem);
+        row-gap: 10%;
+        max-width: 100%;
     }
 
     .contacts__form-mail {
-        padding: 16px 0 16px 26px;
+        padding: 1rem 0 1rem 1.625rem;
     }
 
     .contacts__form-mail::placeholder {
@@ -263,7 +263,7 @@
     }
 
     .contacts__form-btn {
-        padding: 20px 109px;
-        font-size: 14px;
+        padding: 1rem 6rem;
+        font-size: 14px
     }
 }
